--- a/src/components/Layout/Pages/Homepage/Bio/Article.module.css
+++ b/src/components/Layout/Pages/Homepage/Bio/Article.module.css
@@ -4,17 +4,21 @@
   /* align-items: center; */
   /* justify-content: space-between; */
   text-align: start;
+  align-self: center;
+  justify-self: center;
+  justify-content: center;
   margin-top: 200px;
   margin-bottom: 200px;
   /* height: auto; */
-  width: 1200px;
+  /* max-width: 1400px; */
+  width: 65vw;
   gap: 5%;
 }
 
 .content-first article {
   font-size: x-large;
   height: fit-content;
-  width: 100%;
+  width: fit-content;
   margin-top: 50px;
   font-family: "Times New Roman", Times, serif;
 }
